Added layout styles for tablets

--- a/index.html
+++ b/index.html
@@ -34,25 +34,27 @@
   <main>
     <section id="hero">
       <div class="content-wrapper">
-        <article>
-          <div class="hero-image"></div>
-        </article>
         <aside>
-          <h1>A future where AI and humans work hand in hand</h1>
+          <div class="hero-image"></div>
         </aside>
-        <article>
-          <p>At Saleswhale, we believe that the future of work is Collaborative Intelligence - where machines and AI help humans fulfil their highest potential by automating drudgery and producing for more effective results.</p>
-          <p>AI assistants help to automate repetitive and mundane tasks so that us humans focus on creative, high-impact work that creates value and inspires. The result? Happier and more productive teams doing meaningful work.</p>
-          <p>Our mission is to put an AI assistant in every company that could greatly benefit from it, and we're starting off strong addressing this need in marketing and sales teams all across the world.</p>   
-          <p>The future is where AI and humans work hand in hand, and we’re here to help businesses benefit from that.</p>
-        </article>
+          <div class="hero-content">
+          <article class="heading">
+            <h1>A future where AI and humans work hand in hand</h1>
+          </article>
+          <article>
+            <p>At Saleswhale, we believe that the future of work is Collaborative Intelligence - where machines and AI help humans fulfil their highest potential by automating drudgery and producing for more effective results.</p>
+            <p>AI assistants help to automate repetitive and mundane tasks so that us humans focus on creative, high-impact work that creates value and inspires. The result? Happier and more productive teams doing meaningful work.</p>
+            <p>Our mission is to put an AI assistant in every company that could greatly benefit from it, and we're starting off strong addressing this need in marketing and sales teams all across the world.</p>   
+            <p>The future is where AI and humans work hand in hand, and we’re here to help businesses benefit from that.</p>
+          </article>
+        </div>
       </div>
     </section>
 
     <section id="our-culture">
       <div class="content-wrapper">
         <h1>Our Culture</h1>
-        <p>At Saleswhale, we encourage everyone to grow and innovate, while having fun in the process.</p>
+        <p class="culture-desc">At Saleswhale, we encourage everyone to grow and innovate, while having fun in the process.</p>
           <div class="culture-content">
             <article>
               <p><img src="img/our-culture.png" alt="Anime girl"></p>
@@ -70,12 +72,14 @@
               <p>We believe the success of the company lies within our employees and we constantly challenge each other to learn and level up.</p>
             </article>
           </div>
-        <p>If you are excited by our vision of the future, and want to solve meaningful problems, talk to us!</p>
-        <a href="#" class="culture-button">Join the team</a>
+        <p class="culture-desc">If you are excited by our vision of the future, and want to solve meaningful problems, talk to us!</p>
+        <div class="culture-button">
+          <a href="#">Join the team</a>
+        </div>
       </div>
     </section>
 
-    <section id="our-progress">
+    <section id="company-history">
       <h1>Our Progress</h1>
       <div class="timeline-background">
       <div class="content-wrapper">
@@ -109,24 +113,27 @@
     <section id="offices">
       <div class="content-wrapper">
         <h1>Our Offices</h1>
-        <article>
-          <p><img src="img/offices.png" alt="Anime girl"></p>
-          <h2>Singapore</h2>
-          <p>155B Telok Ayer Street</p>
-          <p>Singapore, 068611</p>
-        </article>
-        <article>
-          <p><img src="img/offices.png" alt="Anime girl"></p>
-          <h2>Washington DC</h2>
-          <p>1701 Rhode Island Ave NW</p>
-          <p>Washington, DC 20036</p>
-        </article>
+          <div class="office-locations">
+            <article>
+              <p><img src="img/offices.png" alt="Anime girl"></p>
+              <h2>Singapore</h2>
+              <p>155B Telok Ayer Street</p>
+              <p>Singapore, 068611</p>
+            </article>
+            <article>
+              <p><img src="img/offices.png" alt="Anime girl"></p>
+              <h2>Washington DC</h2>
+              <p>1701 Rhode Island Ave NW</p>
+              <p>Washington, DC 20036</p>
+            </article>
+        </div>
       </div>
     </section>
     
     <section id="investors">
       <div class="content-wrapper">
         <h1>Our Investors</h1>
+        <div class="investors-content">
           <article class="y-combinator">
           </article>
           <article class="mhv">
@@ -135,77 +142,82 @@
           </article>
           <article class="wavemaker">
           </article>
+        </div>
       </div>
     </section>
 
     <section id="demo">
       <div class="content-wrapper">
         <h1>See the future</h1>
-        <article>
-          <a href="#" class="white-button">Get a demo</a>
-        </article>
-        <article>
-          <a href="#" class="white-outline-button">Read use cases</a>
-        </article>
+          <div class="demo-buttons">
+            <article class="white-button">
+              <a href="#">Get a demo</a>
+            </article>
+            <article class="white-outline-button">
+              <a href="#"">Read use cases</a>
+            </article>
+          </div>
       </div>
     </section>
   </main>
 
   <footer>
     <div class="content-wrapper">
-      <article>
-        <img src="img/logo.png" alt="Saleswhale logo"><h2 class="logo">Saleswhale</h2>
-      </article>
         <div class="footer-content">
-        <article>
-          <h3>Why Saleswhale</h3>
-          <p><a href="#">Collaborative Intelligence</a></p>
-          <p><a href="#">AI Assistant Capabilities</a></p>
-          <p><a href="#">Customer Stories</a></p>
-          <p><a href="#">Use Case - Technology</a></p>
-          <p><a href="#">Use Case - Education</a></p>
-          <p><a href="#">Use Case - Events</a></p>
-        </article>
-        <article>
-          <h3>Product</h3>
-          <p><a href="#">AI Conversations</a></p>
-          <p><a href="#">Lead Enrichment</a></p>
-          <p><a href="#">Deal Intelligence</a></p>
-          <p><a href="#">Workflow Integration</a></p>
-        </article>
-        <article>
-          <h3>Company</h3>
-          <p><a href="#">About us</a></p>
-          <p><a href="#">Blog</a></p>
-          <p><a href="#">Resources</a></p>
-          <p><a href="#">Careers</a></p>
-          <p><a href="#">Help Centre</a></p>
-        </article>
-        <article>
-          <h3>Contact</h3>
-          <a href="#">hello@saleswhale.com</a></p>
-          <h3>US Office</h3>
-          <p>1701 Rhode Island Ave NW<br>
-          Washington, DC 20036</p>
-          <h3>Singapore Office</h3>
-          <p>155B Telok Ayer Street<br>
-          Singapore, 068611</p>
-        </article>
+          <article class="footer-logo">
+            <img src="img/logo.png" alt="Saleswhale logo"><h2 class="logo">Saleswhale</h2>
+          </article>
+          <article>
+            <h3>Why Saleswhale</h3>
+            <p><a href="#">Collaborative Intelligence</a></p>
+            <p><a href="#">AI Assistant Capabilities</a></p>
+            <p><a href="#">Customer Stories</a></p>
+            <p><a href="#">Use Case - Technology</a></p>
+            <p><a href="#">Use Case - Education</a></p>
+            <p><a href="#">Use Case - Events</a></p>
+          </article>
+          <article>
+            <h3>Product</h3>
+            <p><a href="#">AI Conversations</a></p>
+            <p><a href="#">Lead Enrichment</a></p>
+            <p><a href="#">Deal Intelligence</a></p>
+            <p><a href="#">Workflow Integration</a></p>
+          </article>
+          <article class="divider">
+          </article>
+          <article>
+            <h3>Company</h3>
+            <p><a href="#">About us</a></p>
+            <p><a href="#">Blog</a></p>
+            <p><a href="#">Resources</a></p>
+            <p><a href="#">Careers</a></p>
+            <p><a href="#">Help Centre</a></p>
+          </article>
+          <article>
+            <h3>Contact</h3>
+            <a href="#">hello@saleswhale.com</a></p>
+            <h3>US Office</h3>
+            <p>1701 Rhode Island Ave NW<br>
+            Washington, DC 20036</p>
+            <h3>Singapore Office</h3>
+            <p>155B Telok Ayer Street<br>
+            Singapore, 068611</p>
+          </article>
       </div>
       <div class="footer-social-media">
-        <article>
+        <article class="social-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
           <a href="#"><i class="fab fa-linkedin-in"></i></a>
         </article>
-        <article>
+        <article class="privacy-policy">
           <p><a href="#">Privacy</a></p>
           <p><a href="#">Terms</a></p>
         </article>
-        <article>
-          <p>© 2020 Saleswhale, Inc. All rights reserved.</p>
-        </article>
       </div>
+      <article class="copyright">
+        <p>© 2020 Saleswhale, Inc. All rights reserved.</p>
+      </article>
     </div>
     <div class="footer-bg-element"></div>
   </footer>
