--- a/index.html
+++ b/index.html
@@ -18,14 +18,18 @@
 <body>
   <header>
     <div class="content-wrapper">
-      <img src="img/logo.png" alt="Saleswhale logo"><h2 class="logo">Saleswhale</h2>
+      <div class="logo">
+        <img src="img/logo.png" alt="Saleswhale logo"><h2 class="logo">Saleswhale</h2>
+      </div>
       <nav>
         <ul>
           <li><a href="#">Why Saleswhale?</a></li>
           <li><a href="#">Product</a></li>
           <li><a href="#">Company</a></li>
-          <li><a href="#" class="outline-button">Log In</a></li>
-          <li><a href="#" class="header-button">Get a Demo</a></li>
+            <div class="nav-buttons">
+              <li><a href="#" class="outline-button">Log In</a></li>
+              <li><a href="#" class="header-button">Get a Demo</a></li>
+            </div>
         </ul>
       </nav>
     </div>
@@ -38,16 +42,16 @@
           <div class="hero-image"></div>
         </aside>
           <div class="hero-content">
-          <article class="heading">
-            <h1>A future where AI and humans work hand in hand</h1>
-          </article>
-          <article>
-            <p>At Saleswhale, we believe that the future of work is Collaborative Intelligence - where machines and AI help humans fulfil their highest potential by automating drudgery and producing for more effective results.</p>
-            <p>AI assistants help to automate repetitive and mundane tasks so that us humans focus on creative, high-impact work that creates value and inspires. The result? Happier and more productive teams doing meaningful work.</p>
-            <p>Our mission is to put an AI assistant in every company that could greatly benefit from it, and we're starting off strong addressing this need in marketing and sales teams all across the world.</p>   
-            <p>The future is where AI and humans work hand in hand, and we’re here to help businesses benefit from that.</p>
-          </article>
-        </div>
+            <article class="heading">
+              <h1>A future where AI and humans work hand in hand</h1>
+            </article>
+            <article>
+              <p>At Saleswhale, we believe that the future of work is Collaborative Intelligence - where machines and AI help humans fulfil their highest potential by automating drudgery and producing for more effective results.</p>
+              <p>AI assistants help to automate repetitive and mundane tasks so that us humans focus on creative, high-impact work that creates value and inspires. The result? Happier and more productive teams doing meaningful work.</p>
+              <p>Our mission is to put an AI assistant in every company that could greatly benefit from it, and we're starting off strong addressing this need in marketing and sales teams all across the world.</p>   
+              <p>The future is where AI and humans work hand in hand, and we’re here to help businesses benefit from that.</p>
+            </article>
+          </div>
       </div>
     </section>
 
