Changed the structure of Investors & Offices flexbox to have better responsiveness

--- a/index.html
+++ b/index.html
@@ -138,13 +138,17 @@
       <div class="content-wrapper">
         <h1>Our Investors</h1>
         <div class="investors-content">
-          <article class="y-combinator">
+          <article>
+            <img src="img/yc-logo.png" alt="Y Combinator Logo">
           </article>
-          <article class="mhv">
+          <article>
+            <img src="img/mhv-logo.png" alt="Y Combinator Logo">
           </article>
-          <article class="strive">
+          <article>
+            <img src="img/strive-logo.png" alt="Y Combinator Logo">
           </article>
-          <article class="wavemaker">
+          <article>
+            <img src="img/wavemaker-logo.png" alt="Y Combinator Logo">
           </article>
         </div>
       </div>
