Added CSS styles for mobile version

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/main.scss">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 
@@ -132,8 +133,7 @@
             </article>
         </div>
       </div>
-    </section>
-    
+
     <section id="investors">
       <div class="content-wrapper">
         <h1>Our Investors</h1>
@@ -152,6 +152,7 @@
           </article>
         </div>
       </div>
+    </section>
     </section>
 
     <section id="demo">
