Adjusted font colors & sizes, margins + padding, and logo display for mobile & tablets

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header>
     <div class="content-wrapper">
       <div class="logo">
-        <img src="img/logo.png" alt="Saleswhale logo"><h2 class="logo">Saleswhale</h2>
+        <a href="#"><img src="img/sw-logo.png" alt="Saleswhale logo"></a>
       </div>
       <nav>
         <ul>
@@ -122,14 +122,14 @@
             <article>
               <p><img src="img/offices.png" alt="Anime girl"></p>
               <h2>Singapore</h2>
-              <p>155B Telok Ayer Street</p>
-              <p>Singapore, 068611</p>
+              <p>155B Telok Ayer Street<br>
+              Singapore, 068611</p>
             </article>
             <article>
               <p><img src="img/offices.png" alt="Anime girl"></p>
               <h2>Washington DC</h2>
-              <p>1701 Rhode Island Ave NW</p>
-              <p>Washington, DC 20036</p>
+              <p>1701 Rhode Island Ave NW</br>
+              Washington, DC 20036</p>
             </article>
         </div>
       </div>
@@ -174,7 +174,7 @@
     <div class="content-wrapper">
         <div class="footer-content">
           <article class="footer-logo">
-            <img src="img/logo.png" alt="Saleswhale logo"><h2 class="logo">Saleswhale</h2>
+            <img src="img/sw-logo.png" alt="Saleswhale logo">
           </article>
           <article>
             <h3>Why Saleswhale</h3>
