--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
             <img src="img/yc-logo.png" alt="Y Combinator Logo">
           </article>
           <article>
-            <img src="img/mhv-logo.png" alt="Y Combinator Logo">
+            <img src="img/mhv-logo.png" alt="Monk's Hill Venture Logo">
           </article>
           <article>
-            <img src="img/strive-logo.png" alt="Y Combinator Logo">
+            <img src="img/strive-logo.png" alt="Strive Logo Logo">
           </article>
           <article>
-            <img src="img/wavemaker-logo.png" alt="Y Combinator Logo">
+            <img src="img/wavemaker-logo.png" alt="Wavemaker Logo">
           </article>
         </div>
       </div>
@@ -215,9 +215,9 @@
       </div>
       <div class="footer-social-media">
         <article class="social-icons">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+          <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         </article>
         <article class="privacy-policy">
           <p><a href="#">Privacy</a></p>
@@ -230,9 +230,6 @@
     </div>
     <div class="footer-bg-element"></div>
   </footer>
-
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
 </body>
 
 </html>
